# databricks-studies

./: README.md  pyproject.toml
.github/workflows/: main.yml
src/bronze/: Ingestão.ipynb  clientes.json  clientes_schema_full_load.json  customers_schema_cdc.json  customers_schema_full.json  ingestion_bronze.ipynb  ingestion_bronze.py  order_payments_schema.json  order_payments_schema_full.json  orders_schema.json  orders_schema_cdc.json  orders_schema_full.json  transacao_produto_schema_cdc.json  transacao_produto_schema_full_load.json  transacoes.json  transacoes_schema_full_load.json
src/lib/: ingestors.py  utils.py
src/silver/: clientes.sql  customers.sql  ingestion_silver.py  pagamento_pedidos.sql  pedidos.sql  product_transaction.sql  transactions.sql
src/workflows/: Ingestao.json  Ingestion.json  main.py
